--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 .container {
     max-width: 600px;
     margin: 50px auto;
-    background-color: #fff;
+    background-color: #ffffff;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
@@ -38,7 +38,7 @@ input {
 
 button {
     padding: 10px;
-    background-color: #28a745;
+    background-color: #010c046e;
     color: white;
     border: none;
     border-radius: 4px;
@@ -46,7 +46,7 @@ button {
 }
 
 button:hover {
-    background-color: #218838;
+    background-color: #4daf62;
 }
 
 .listas {
@@ -65,7 +65,7 @@ ul {
 }
 
 li {
-    background-color: #007BFF;
+    background-color: #007bff56;
     color: white;
     padding: 10px;
     margin: 5px 0;
